fix overflow issue, rm old minified css

--- a/src/less/common.less
+++ b/src/less/common.less
@@ -38,7 +38,9 @@ a:active {
 body > header,
 body > footer,
 div[role=main] {
-  min-width: 18rem;
+  // min-width same as .wrap
+  min-width: 20rem;
+  overflow: hidden;
 }
 div[role=main] {
   min-height: 16rem;
